--- a/src/app/comment/list/comment-list-page.html
+++ b/src/app/comment/list/comment-list-page.html
@@ -2,7 +2,7 @@
 
   <div fxFlex class="table-component-holder mat-elevation-z4">
     <mat-toolbar class="table-header">
-      <h1 class="mat-headline center-align">Comment List Page</h1>
+      <h1 class="mat-headline center-align">Comment Detail List Page</h1>
     </mat-toolbar>
 
     <div class="table-container">
@@ -40,7 +40,7 @@
 
         <mat-header-row *matHeaderRowDef="columns"></mat-header-row>
         <mat-row *matRowDef="let row; columns: columns;"
-                 (click)="view(row)"></mat-row>
+                 (click)="navigate(row)"></mat-row>
 
       </mat-table>
     </div>
